adfs-for-o365/nestedtemplates/NSG.json
    {
      "type": "Microsoft.Network/networkSecurityGroups",
      "name": "[concat(parameters('subnetName'),'nsg')]",
      "apiVersion": "2016-03-30",
      "location": "[resourceGroup().location]",
      "properties": {
          "securityRules": [
              {
                  "name": "AllowHTTPSfromDMZ",
                  "properties": {
                      "protocol": "Tcp",
                      "sourcePortRange": "*",
                      "destinationPortRange": "443",
                      "sourceAddressPrefix": "10.1.0.0/30",
                      "destinationAddressPrefix": "*",
                      "access": "Allow",
                      "priority": 1000,
                      "direction": "Inbound"
                  }
              },
              {
                  "name": "DenyInternetOutbound",
                  "properties": {
                      "protocol": "*",
                      "sourcePortRange": "*",
                      "destinationPortRange": "*",
                      "sourceAddressPrefix": "*",
                      "destinationAddressPrefix": "Internet",
                      "access": "Deny",
                      "priority": 1100,
                      "direction": "Outbound"
                  }
              }
          ]
      },
      "resources": [],
      "dependsOn": []
    },
    {
    "type": "Microsoft.Network/networkSecurityGroups",
    "name": "[concat(parameters('dmzsubnetName'),'nsg')]",
    "apiVersion": "2016-03-30",
    "location": "[resourceGroup().location]",
    "properties": {
        "securityRules": [
            {
                "name": "AllowHTTPSfromDMZ",
                "properties": {
                    "protocol": "Tcp",
                    "sourcePortRange": "*",
                    "destinationPortRange": "443",
                    "sourceAddressPrefix": "10.1.0.0/30",
                    "destinationAddressPrefix": "*",
                    "access": "Allow",
                    "priority": 1000,
                    "direction": "Inbound"
                }
            },
            {
                "name": "DenyInternetOutbound",
                "properties": {
                    "protocol": "*",
                    "sourcePortRange": "*",
                    "destinationPortRange": "*",
                    "sourceAddressPrefix": "*",
                    "destinationAddressPrefix": "Internet",
                    "access": "Deny",
                    "priority": 1100,
                    "direction": "Outbound"
                }
            },
            {
                "name": "AllowHTTPSOutbound",
                "properties": {
                    "protocol": "*",
                    "sourcePortRange": "*",
                    "destinationPortRange": "443",
                    "sourceAddressPrefix": "*",
                    "destinationAddressPrefix": "Internet",
                    "access": "Allow",
                    "priority": 1010,
                    "direction": "Outbound"
                }
            }
        ]
    }
    }
