adfs-for-o365/nestedtemplates/vnet-with-dns-server.json
{
  "$schema": "https://schema.management.azure.com/schemas/2015-01-01/deploymentTemplate.json#",
  "contentVersion": "1.0.0.0",
  "parameters": {
    "virtualNetworkName": {
      "type": "string",
      "metadata": {
        "Description": "The name of the Virtual Network to Create"
      }
    },
    "virtualNetworkAddressRange": {
      "type": "string",
      "metadata": {
        "Description": "The address range of the new VNET in CIDR format"
      },
      "defaultValue": "10.0.0.0/16"
    },
    "internalsubnetName": {
      "type": "string",
      "metadata": {
        "Description": "The name of the subnet created in the new VNET"
      }
    },
    "internalsubnetRange": {
      "type": "string",
      "metadata": {
        "Description": "The address range of the subnet created in the new VNET"
      },
      "defaultValue": "10.0.0.0/24"
    },
    "dmzsubnetName": {
      "type": "string",
      "metadata": {
        "Description": "The name of the subnet created in the new VNET"
      },
      "defaultValue": "dmzsubnet"
    },
    "dmzsubnetRange": {
      "type": "string",
      "metadata": {
        "Description": "The address range of the subnet created in the new VNET"
      },
      "defaultValue": "10.0.0.0/30"
    },
    "DNSServerAddress": {
      "type": "array",
      "metadata": {
        "Description": "The DNS address(es) of the DNS Server(s) used by the VNET"
      }
    }
  },
  "resources": [
    {"name": "[parameters('virtualNetworkName')]",
      "type": "Microsoft.Network/virtualNetworks",
      "location": "[resourceGroup().location]",
      "apiVersion": "2016-10-01",
      "properties": {
        "addressSpace": {
          "addressPrefixes": [
            "[parameters('virtualNetworkAddressRange')]"
          ]
        },
        "dhcpOptions": {
          "dnsServers": "[parameters('DNSServerAddress')]"
        },
        "subnets": [
          {
            "name": "[parameters('internalsubnetName')]",
            "properties": {
              "addressPrefix": "[parameters('internalsubnetRange')]"
            }
          },
                    {
            "name": "[parameters('dmzsubnetName')]",
            "properties": {
              "addressPrefix": "[parameters('dmzsubnetRange')]"
            }
          }
        ]
      }
    },
    {
      "type": "Microsoft.Network/networkSecurityGroups",
      "name": "[concat(parameters('internalsubnetName'),'nsg')]",
      "apiVersion": "2016-03-30",
      "location": "[resourceGroup().location]",
      "properties": {
          "securityRules": [
              {
                  "name": "AllowHTTPSfromDMZ",
                  "properties": {
                      "protocol": "TCP",
                      "sourcePortRange": "*",
                      "destinationPortRange": "443",
                      "sourceAddressPrefix": "10.1.0.0/30",
                      "destinationAddressPrefix": "*",
                      "access": "Allow",
                      "priority": 1000,
                      "direction": "Inbound"
                  }
              },
              {
                  "name": "DenyInternetOutbound",
                  "properties": {
                      "protocol": "*",
                      "sourcePortRange": "*",
                      "destinationPortRange": "*",
                      "sourceAddressPrefix": "*",
                      "destinationAddressPrefix": "Internet",
                      "access": "Deny",
                      "priority": 1100,
                      "direction": "Outbound"
                  }
              }
          ]
      },
      "resources": [],
      "dependsOn": []
    },
       {
      "type": "Microsoft.Network/networkSecurityGroups",
      "name": "[concat(parameters('dmzsubnetName'),'nsg')]",
      "apiVersion": "2016-03-30",
      "location": "[resourceGroup().location]",
      "properties": {
          "securityRules": [
              {
                  "name": "AllowHTTPSfromDMZ",
                  "properties": {
                      "protocol": "Tcp",
                      "sourcePortRange": "*",
                      "destinationPortRange": "443",
                      "sourceAddressPrefix": "10.1.0.0/30",
                      "destinationAddressPrefix": "*",
                      "access": "Allow",
                      "priority": 1000,
                      "direction": "Inbound"
                  }
              },
              {
                  "name": "DenyInternetOutbound",
                  "properties": {
                      "protocol": "*",
                      "sourcePortRange": "*",
                      "destinationPortRange": "*",
                      "sourceAddressPrefix": "*",
                      "destinationAddressPrefix": "Internet",
                      "access": "Deny",
                      "priority": 1100,
                      "direction": "Outbound"
                  }
              },
              {
                  "name": "AllowHTTPSOutbound",
                  "properties": {
                      "protocol": "*",
                      "sourcePortRange": "*",
                      "destinationPortRange": "443",
                      "sourceAddressPrefix": "*",
                      "destinationAddressPrefix": "Internet",
                      "access": "Allow",
                      "priority": 1010,
                      "direction": "Outbound"
                  }
              }
          ]
      },
      "resources": [],
      "dependsOn": []
    }
  ]
}
